--- a/frontend/app/package.json
+++ b/frontend/app/package.json
@@ -14,6 +14,7 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "vue": "^2.6.10",
+    "vue-js-modal": "^1.3.31",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
