--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,9 @@ services:
     logging:
       driver: none
     ports:
-    - 27017:27019
-    network_mode: "host"
+    - 27017:27017
+    networks:
+      - custom-network
   
   backend:
     container_name: golang-backend
@@ -20,7 +21,8 @@ services:
       dockerfile: go.Dockerfile
     ports:
     - 8090:8090
-    network_mode: "host"
+    networks:
+      - custom-network
 
   frontend:
     container_name: vue-frontend
@@ -29,27 +31,30 @@ services:
       dockerfile: vue.Dockerfile
     ports:
     - 8080:8080
-    network_mode: "host"
+    networks:
+      - custom-network
    
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.3.1
-    container_name: elasticsearch
+    image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.4.0
     environment:
-      - node.name=es01
-      - cluster.initial_master_nodes=es01
-      - cluster.name=docker-cluster
-      - bootstrap.memory_lock=true
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    - cluster.name=elastic
+    - bootstrap.memory_lock=true
+    - http.host=0.0.0.0
+    - transport.host=127.0.0.1
+    - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
     ulimits:
+      nproc: 65536
+      nofile:
+        soft: 65536
+        hard: 65536
       memlock:
         soft: -1
         hard: -1
-    volumes:
-      - esdata01:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
-    network_mode: "host"
+    networks: 
+      - custom-network
 
-volumes:
-  esdata01:
-    driver: local
+networks: 
+  custom-network:
+  
