--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,13 +4,13 @@ services:
   mongodb:
     container_name: mongodb
     image: mongo:3.6
-    command: mongod --port 27017
+    command: mongod --port 27018
     volumes:
     - .data/mongo:/data/db
     logging:
       driver: none
     ports:
-    - 27017:27017
+    - 27018:27018
     networks:
       - custom-network
   
@@ -35,13 +35,13 @@ services:
       - custom-network
    
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.4.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.3.1
     environment:
-    - cluster.name=elastic
+    - node.name=es01
+    - cluster.initial_master_nodes=es01
+    - cluster.name=docker-cluster
     - bootstrap.memory_lock=true
-    - http.host=0.0.0.0
-    - transport.host=127.0.0.1
-    - "ES_JAVA_OPTS=-Xms1g -Xmx1g"
+    - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
     ulimits:
       nproc: 65536
       nofile:
@@ -51,10 +51,9 @@ services:
         soft: -1
         hard: -1
     ports:
-      - 9200:9200
+      - 9200
     networks: 
       - custom-network
 
 networks: 
   custom-network:
-  
