--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ go:
 git:
   depth: 1
 
+install: true
+
 # Anything in before_script that returns a nonzero exit code will flunk the
 # build and immediately stop. It's sorta like having set -e enabled in bash.
 # Make sure golangci-lint is vendored.
