--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,20 @@
-# use the latest ubuntu environment (18.04) available on travis
-dist: xenial
-
 language: go
 
-# Force-enable Go modules. Also force go to use the code in vendor/
-# These will both be unnecessary when Go 1.13 lands.
 env:
-  - GO111MODULE=on
+  - GO111MODULE=on MONGO_URI="mongodb://localhost:27017" ES_URL="http://localhost:9200"
 
-# You don't need to test on very old versions of the Go compiler. It's the user's
-# responsibility to keep their compiler up to date.
 go:
   - 1.12.x
 
-# Only clone the most recent commit.
 git:
   depth: 1
 
-install: true
+services: 
+  - mongodb
+  - elasticsearch
 
-# script always runs to completion (set +e). If we have linter issues AND a
-# failing test, we want to see both. Configure golangci-lint with a
-# .golangci.yml file at the top level of your repo.
-script:
+install: 
   - go mod init golang-crud-spa
-  - go test -v -race ./...  # Run all the tests with the race detector enabled
+
+script:
+  - go build
